--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SR",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"to do\"",
+    "test": "node test.js",
     "start": "node server.js"
   },
   "keywords": [
@@ -18,5 +18,8 @@
     "express": "^4.13.4",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.5"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
   }
 }
