--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "SR",
     "main": "server.js",
     "scripts": {
-        "test": "./node_modules/mocha/bin/mocha test.js",
+        "test": "./node_modules/mocha/bin/mocha test2.js",
         "start": "node server.js"
     },
     "keywords": [
