--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "author": "qfdk",
   "license": "ISC",
   "dependencies": {
+    "chai": "^3.5.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "request": "^2.79.0",
+    "request-mocha": "^0.2.0",
     "serve-favicon": "^2.3.0",
+    "sleep": "^5.0.0",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.7.1"
   },
