--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "SR_GAME",
+  "name": "sr_game",
   "version": "1.1.0",
   "description": "SR",
   "main": "server.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test2.js",
+    "test": "./node_modules/mocha/bin/mocha test/test.js",
     "start": "node server.js"
   },
   "keywords": [
